Fix left alignment (css) for short_heaaders.

--- a/Rocksolid_Light/common/themes/style.css
+++ b/Rocksolid_Light/common/themes/style.css
@@ -423,6 +423,7 @@
 .short_header_subject {
 	margin-top: 0;
 	margin-bottom: 0;
+	margin-left: 0.4em;
 	text-decoration: none;
 	color: var(--color-text);
 	font-family: Arial, Helvetica, sans-serif;
@@ -451,6 +452,7 @@
 .short_header_from {
 	margin-top: 0;
 	margin-bottom: 0;
+	margin-left: 0.4em;
 	text-decoration: none;
 	color: var(--color-highlight);
 	font-family: Arial, Helvetica, sans-serif;
@@ -462,6 +464,7 @@
 	margin-top: 0;
 	margin-bottom: 0;
 	margin-right: 1em;
+	margin-left: 0.4em;
 	text-decoration: none;
 	color: var(--color-highlight);
 	font-family: Arial, Helvetica, sans-serif;
